# python-slim

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
docker/app/: Dockerfile
