[tool.poetry]
name = "python-slim"
version = "0.0.1"
description = ""
readme = "README.md"
authors = ["fuuga000"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[tool.mypy]
python_version = 3.9
check_untyped_defs = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
